[package]
name = "utils"
version = "0.0.1"
authors = ["bonedaddy <boned4ddy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# todo(bonedaddy): eventually migrate to upstream
#                  dependent on us upgrading solfarm specific repos first
[dependencies]
anchor-client = { git = "https://github.com/sol-farm/anchor.git", rev="71d7b97bd55f7d73e8512e717adcacda59c320b3" }
anchor-lang = { git = "https://github.com/sol-farm/anchor.git", rev="71d7b97bd55f7d73e8512e717adcacda59c320b3" }
anyhow = "1.0.41"
arrayref = "0.3.6"
num-traits = "0.2.14"
once_cell = "1.8.0"
serum_dex = { git = "https://github.com/bonedaddy/serum-dex", rev="ceb2b2120ad1dbf03375f464ab65ade6fc18fa20", features = ["no-entrypoint"] }
thiserror = "1.0.25"
spl-token = "3.1.0"
