[package]
name = "solana-utils"
version = "0.1.0"
authors = ["bonedaddy <boned4ddy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.11.1"
anchor-lang = "0.11.1"
anyhow = "1.0.41"
arrayref = "0.3.6"
num-traits = "0.2.14"
once_cell = "1.8.0"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "1f6d5867019e242a470deed79cddca0d1f15e0a3", features = ["no-entrypoint"] }
thiserror = "1.0.25"
spl-token = "3.1.0"
rand = "0.7.0"
bytemuck = "1.7.0"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.5"
crossbeam-channel = "0.5"